--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>芝士猫 YouTube Shorts 高清下载</title>
     <!-- 标准图标 -->
-    <link rel="icon" type="image/png" href="/static/favicon.png">
+    <link rel="icon" type="image/png" href="/favicon.png">
     <!-- iOS图标 -->
-    <link rel="apple-touch-icon" sizes="180x180" href="/static/favicon-180.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/favicon-180.png">
     <!-- Android图标 -->
-    <link rel="icon" type="image/png" sizes="192x192" href="/static/favicon-192.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="/favicon-192.png">
     <!-- Windows磁贴图标 -->
-    <meta name="msapplication-TileImage" content="/static/favicon-192.png">
+    <meta name="msapplication-TileImage" content="/favicon-192.png">
     <meta name="msapplication-TileColor" content="#2196f3">
     <!-- Safari固定标签页图标 -->
-    <link rel="mask-icon" href="/static/favicon.svg" color="#2196f3">
+    <link rel="mask-icon" href="/favicon.svg" color="#2196f3">
     <!-- 主题颜色 -->
     <meta name="theme-color" content="#2196f3">
     <script src="https://cdn.tailwindcss.com"></script>
@@ -43,7 +43,7 @@
         <div class="w-full max-w-2xl">
             <!-- 输入框和图标 -->
             <div class="relative flex items-center mb-4">
-                <img src="/static/favicon.png" alt="芝士猫图标" class="w-8 h-8 mr-2">
+                <img src="/favicon.png" alt="芝士猫图标" class="w-8 h-8 mr-2">
                 <input type="text" 
                        id="url" 
                        class="w-full px-4 py-3 rounded-lg border border-gray-300 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent pr-12"
